--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -5,6 +5,6 @@
       <use href="./images/sprite.svg#icon-heart"></use>
     </svg>
     by GoIT Students,
-    <a href="" class="footer__team" data-action="team-open-modal">Team *Team Name*</a>
+    <a href="" class="footer__team" data-action="team-open-modal">Team FilmotekaVeka</a>
   </p>
 </footer>
