--- a/src/partials/modal-team.html
+++ b/src/partials/modal-team.html
@@ -6,7 +6,7 @@
       </svg>
     </button>
     <div class="team__container">
-      <h2 class="team__name">Team *Team Name*</h2>
+      <h2 class="team__name">Gang FilmotekaVeka</h2>
       <p class="team__slogan">You gotta know your LEGENDS by the face</p>
 
       <div class="team__list">
@@ -112,13 +112,13 @@
 
           <li class="team__item">
             <img
-              src="./images/Vitaliy_Lyakh@2x.png"
+              src="./images/Dima_Soroka.png"
               alt=""
               loading="lazy"
               class="team__img"
             />
             <h3 class="team__name">Dmitriy Soroka</h3>
-            <p class="team__role">Footer, Modal</p>
+            <p class="team__role">Watched, Queue</p>
           </li>
 
           <li class="team__item">
