--- a/src/partials/library.html
+++ b/src/partials/library.html
@@ -20,8 +20,8 @@
     </div>
 
     <div class="header-library__btn-list">
-      <button class="header-library__btn" type="button">Watched</button>
-      <button class="header-library__btn" type="button">Queue</button>
+      <button class="header-library__btn" data-action="watched" type="button">Watched</button>
+      <button class="header-library__btn" data-action="queue" type="button">Queue</button>
     </div>
 
     <div class="theme-switch">
