--- a/src/sass/header-myLibrary/_librarry.scss
+++ b/src/sass/header-myLibrary/_librarry.scss
@@ -1,6 +1,3 @@
-// .container1 {
-
-// }
 .header-library {
   margin-right: auto;
   margin-left: auto;
@@ -166,4 +163,5 @@
 }
 .nav-library__logo {
   display: flex;
+  align-items: center;
 }
