--- a/src/partials/library.html
+++ b/src/partials/library.html
@@ -4,9 +4,9 @@
       <a class="nav-library__logo" href="./index.html">
         <svg class="header-library__icon" width="24px" height="24px">
           <use href="./images/sprite.svg#icon-film"></use></svg
-      ></a>
+      ><span class="header-library__tittle">Filmoteka</span></a>
 
-      <span class="header-library__tittle">Filmoteka</span>
+      
       <ul class="header-library__list">
         <li><a class="header-library__link" href="./index.html">Home</a></li>
         <li>
