--- a/src/sass/layouts/_collection-item.scss
+++ b/src/sass/layouts/_collection-item.scss
@@ -1,4 +1,5 @@
 .card__item {
+  position: relative;
   border-radius: 5px;
   list-style-type: none;
   height: 440px;
@@ -51,16 +52,19 @@
 }
 
 .card__rating {
+  position: absolute;
+  top: 10px;
+  right: 10px;
   display: inline-block;
-  margin-left: 10px;
+
   padding-top: 1px;
   padding-bottom: 1px;
   border-radius: 5px;
   color: #eeeeee;
   background-color: #ff6b08;
-  width: 36px;
-  height: 16 px;
-  font-size: 12px;
+  width: 50px;
+  height: 25px;
+  font-size: 22px;
   line-height: 1.17;
   text-align: center;
 }
@@ -91,9 +95,9 @@
   }
 
   .card__rating {
-    width: 36px;
-    height: 16px;
-    font-size: 12px;
+    width: 60px;
+    height: 30px;
+    font-size: 26px;
     line-height: 1.17;
   }
 }
@@ -122,9 +126,9 @@
   }
 
   .card__rating {
-    width: 40px;
-    height: 24px;
-    font-size: 18px;
+    width: 70px;
+    height: 35px;
+    font-size: 32px;
     line-height: 1.17;
   }
 }
