add text shadow

--- a/src/sass/layouts/_collection-item.scss
+++ b/src/sass/layouts/_collection-item.scss
@@ -11,6 +11,13 @@
   &:focus {
     opacity: 0.9;
     transform: scale(1.025);
+    .card__title,
+    .card__description {
+      text-shadow: rgb(171, 171, 171) 2px 5px 5px;
+    }
+    .card__rating {
+      box-shadow: #ff6b08 2px 2px 10px;
+    }
   }
 }
 
