--- a/src/sass/layouts/_collection-item.scss
+++ b/src/sass/layouts/_collection-item.scss
@@ -13,7 +13,7 @@
     transform: scale(1.025);
     .card__title,
     .card__description {
-      text-shadow: rgb(171, 171, 171) 2px 5px 5px;
+      text-shadow: 0 4px 4px rgb(0 0 0 / 25%);
     }
     .card__rating {
       box-shadow: #ff6b08 2px 2px 10px;
