--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="container header__container">
     <nav class="site-nav">
-      <a class="logo logo__header" href="./index.html">
+      <a class="logo logo__header" aria-label="Логотип" href="./index.html">
         <svg class="logo__header--icon" width="24px" height="24px">
           <use href="./images/sprite.svg#icon-film"></use>
         </svg>
@@ -27,7 +27,7 @@
           autocomplete="off"
           placeholder="Movie search"
         />
-        <button class="btn search-form__btn" type="submit">
+        <button class="btn search-form__btn" aria-label="поиск" type="submit">
           <svg class="btn__header--icon" width="12px" height="12px">
             <use href="./images/sprite.svg#icon-search-icon"></use>
           </svg>
