--- a/src/sass/header-myLibrary/_librarry.scss
+++ b/src/sass/header-myLibrary/_librarry.scss
@@ -128,6 +128,7 @@
   border-radius: 5px;
   background-color: transparent;
   border-color: #fff;
+  cursor: pointer;
   @media screen and (min-width: $tablet) {
     // margin-top: 40px;
     width: 152px;
