--- a/src/sass/layouts/_modal-film.scss
+++ b/src/sass/layouts/_modal-film.scss
@@ -194,6 +194,7 @@
 .film__btns {
   display: flex;
   justify-content: center;
+  
 
   @media screen and (min-width: $tablet) {
     justify-content: flex-end;
@@ -208,6 +209,7 @@
 .film__btn {
   width: 110px;
   height: 44px;
+  cursor: pointer;
 
   border: 1px solid;
   border-radius: 5px;
