--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -19,6 +19,7 @@
 // @import './layouts/films-collection';
 @import './layouts/collection-item';
 @import './layouts/modal-film';
+@import './layouts/modal-trailer';
 @import './layouts/modal-team';
 @import './layouts/footer';
 @import './layouts/pagination';
