--- a/src/sass/layouts/_modal-film.scss
+++ b/src/sass/layouts/_modal-film.scss
@@ -264,37 +264,37 @@
   }
 }
 
-// .film__overlay {
-//   position: absolute;
-//   top: 0;
-//   left: 0;
+.film__overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
 
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-//   width: 100%;
-//   height: 100%;
-//   background: rgba(240, 120, 40, 0.2);
-//   transform: translateY(101%);
+  width: 100%;
+  height: 100%;
+  background: rgba(240, 120, 40, 0.2);
+  transform: translateY(101%);
 
-//   transition-property: transform;
-//   transition-duration: 250ms;
-//   transition-timing-function: ease-in-out;
-// }
-// .film__poster:hover .film__overlay {
-//   transform: translateY(0);
-// }
-// .film__play-img {
-//   width: 100px;
-//   height: 100px;
-//   scale: 1;
-//   transition: transform 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
-//   cursor: pointer;
-// }
-// .film__play-img:hover {
-//   transform: scale(1.15);
-// }
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: ease-in-out;
+}
+.film__poster:hover .film__overlay {
+  transform: translateY(0);
+}
+.film__play-img {
+  width: 100px;
+  height: 100px;
+  scale: 1;
+  transition: transform 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  cursor: pointer;
+}
+.film__play-img:hover {
+  transform: scale(1.15);
+}
 
 .no-scroll {
   overflow: hidden;
