add library btn is_active

--- a/src/sass/header-myLibrary/_librarry.scss
+++ b/src/sass/header-myLibrary/_librarry.scss
@@ -154,6 +154,11 @@
   background-color: #ff6b01;
   border: none;
 }
+.header-library__btn.is_active,
+.header-library__btn.is_active {
+  background-color: #ff6b01;
+  border: none;
+}
 
 .nav-library {
   display: flex;
