add library btn is_active

--- a/src/sass/header-myLibrary/_librarry.scss
+++ b/src/sass/header-myLibrary/_librarry.scss
@@ -152,6 +152,10 @@
   background-color: #ff6b01;
   border: none;
 }
+.header-library__btn.is-active {
+  background-color: #ff6b01;
+  border: none;
+}
 
 .nav-library {
   display: flex;
