--- a/src/partials/modal-team.html
+++ b/src/partials/modal-team.html
@@ -41,7 +41,7 @@
               class="team__img"
             />
             <h3 class="team__name">Maxim Dorogokuplya</h3>
-            <p class="team__role">Footer, Modal</p>
+            <p class="team__role">Modal, theme, spinner, trailer</p>
           </li>
 
           <li class="team__item">
@@ -52,7 +52,7 @@
               class="team__img"
             />
             <h3 class="team__name">Vitaliy Lyakh</h3>
-            <p class="team__role">Footer, Modal</p>
+            <p class="team__role">Firebase</p>
           </li>
 
           <li class="team__item">
