--- a/src/partials/modal-film.html
+++ b/src/partials/modal-film.html
@@ -8,8 +8,10 @@
     <div class="film__container"></div>
     <div class="film__btns">
       <button type="button" class="film__btn film__btn--add" data-addToWatched>
+        add to watched
       </button>
       <button type="button" class="film__btn film__btn--add" data-addToQueue>
+        add to queue
       </button>
     </div>
   </div>
