--- a/src/partials/modal-team.html
+++ b/src/partials/modal-team.html
@@ -1,4 +1,4 @@
-<div class="backdrop-team is-hidden">
+<div class="backdrop-team is-hidden" data-action="backdrop-team">
   <div class="modal-team">
     <button type="button" class="modal-team__close-btn" data-action="team-close-modal">
       <svg class="modal-film__close-icon" width="14" height="14">
