--- a/src/sass/layouts/_modal-team.scss
+++ b/src/sass/layouts/_modal-team.scss
@@ -99,6 +99,6 @@
     opacity: 0.9;
     transform: scale(1.025);
   }
-  transition: 250ms linear;
+  transition: transition 250ms linear;
   cursor: pointer;
 }
