--- a/src/sass/layouts/_modal-team.scss
+++ b/src/sass/layouts/_modal-team.scss
@@ -85,6 +85,7 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  
 }
 .team__img {
   width: 200px;
@@ -99,6 +100,6 @@
     opacity: 0.9;
     transform: scale(1.025);
   }
-  transition: transition 250ms linear;
+  transition: transform 250ms linear;
   cursor: pointer;
 }
