add github links

--- a/src/partials/modal-team.html
+++ b/src/partials/modal-team.html
@@ -12,122 +12,144 @@
       <div class="team__list">
         <ul class="team__list">
           <li class="team__item">
-            <img
+            <a href="https://github.com/netmarketolog" target="_blank">
+              <img
               src="./images/Aleksandr_Shabanov@2x.png"
               alt=""
               loading="lazy"
               class="team__img"
             />
+            </a>
             <h3 class="team__name">Aleksandr Shabanov</h3>
             <p class="team__role">Team Lead</p>
           </li>
 
           <li class="team__item">
-            <img
+            <a href="https://github.com/Vetali1985" target="_blank">
+              <img
               src="./images/Vitalii_Sidorenko@2x.png"
               alt=""
               loading="lazy"
               class="team__img"
             />
+            </a>
             <h3 class="team__name">Vitaliy Sidorenko</h3>
             <p class="team__role">Scrum-master, My Library</p>
           </li>
 
           <li class="team__item">
-            <img
+            <a href="https://github.com/DorogMaks" target="_blank">
+              <img
               src="./images/Maxim_Dorogokuplya@2x.png"
               alt=""
               loading="lazy"
               class="team__img"
             />
+            </a>
             <h3 class="team__name">Maxim Dorogokuplya</h3>
             <p class="team__role">Modal, theme, spinner, trailer</p>
           </li>
 
           <li class="team__item">
-            <img
+            <a href="https://github.com/SVPapik" target="_blank">
+              <img
               src="./images/Vitaliy_Lyakh@2x.png"
               alt=""
               loading="lazy"
               class="team__img"
             />
+            </a>
             <h3 class="team__name">Vitaliy Lyakh</h3>
             <p class="team__role">Firebase</p>
           </li>
 
           <li class="team__item">
-            <img
+            <a href="https://github.com/maxieo" target="_blank">
+              <img
               src="./images/Maxim_Ostrovsky.png"
               alt=""
               loading="lazy"
               class="team__img"
             />
+            </a>
             <h3 class="team__name">Maxim Ostrovsky</h3>
             <p class="team__role">Footer, Modal, Prettier Master</p>
           </li>
 
           <li class="team__item">
-            <img
+            <a href="https://github.com/Oleksandr482" target="_blank">
+              <img
               src="./images/Alexandr_Demianenko.png"
               alt=""
               loading="lazy"
               class="team__img"
             />
+            </a>
             <h3 class="team__name">Aleksandr Demianenko</h3>
             <p class="team__role">Pagination, Popular</p>
           </li>
 
           <li class="team__item">
-            <img
+            <a href="https://github.com/Nandy7777" target="_blank">
+              <img
               src="./images/Nadiia_Kotyk.png"
               alt=""
               loading="lazy"
               class="team__img"
             />
+            </a>
             <h3 class="team__name">Nadiia Kotyk</h3>
             <p class="team__role">Search Form</p>
           </li>
 
           <li class="team__item">
-            <img
+            <a href="https://github.com/AndriyLevchenko" target="_blank">
+              <img
               src="./images/Andrey_Levchenko.png"
               alt=""
               loading="lazy"
               class="team__img"
             />
+            </a>
             <h3 class="team__name">Andriy Levchenko</h3>
             <p class="team__role">LocalStorage</p>
           </li>
 
           <li class="team__item">
-            <img
+            <a href="https://github.com/dffleh" target="_blank">
+              <img
               src="./images/Vadym_Liubushkin.png"
               alt=""
               loading="lazy"
               class="team__img"
             />
+            </a>
             <h3 class="team__name">Vadym Liubushkin</h3>
             <p class="team__role">Header</p>
           </li>
 
           <li class="team__item">
-            <img
+            <a href="https://github.com/ISoRkAI" target="_blank">
+              <img
               src="./images/Dima_Soroka.png"
               alt=""
               loading="lazy"
               class="team__img"
             />
+            </a>
             <h3 class="team__name">Dmitriy Soroka</h3>
             <p class="team__role">Watched, Queue</p>
           </li>
 
           <li class="team__item">
-            <img
+            <a href="https://github.com/madaradayada" target="_blank">
+              <img
               src="./images/Alexandr_Mitrofanov.png"
               alt=""
               loading="lazy"
               class="team__img"
             />
+            </a>
             <h3 class="team__name">Aleksandr Mitrofanov</h3>
             <p class="team__role">Film Conteiner, Modal Film</p>
           </li>
