--- a/src/partials/library.html
+++ b/src/partials/library.html
@@ -18,11 +18,13 @@
         </li>
       </ul>
     </div>
-
+    
     <div class="header-library__btn-list">
       <button class="header-library__btn" data-action="watched" type="button">Watched</button>
       <button class="header-library__btn" data-action="queue" type="button">Queue</button>
     </div>
+
+    <div id="loginUserDetails"></div>
 
     <div class="theme-switch">
       <label class="switch">
