--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -15,6 +15,7 @@
 @import './layouts/header';
 @import './layouts/theme-switch';
 @import './layouts/theme';
+@import './layouts/firebase';
 
 // @import './layouts/films-collection';
 @import './layouts/collection-item';
