--- a/src/sass/layouts/_firebase.scss
+++ b/src/sass/layouts/_firebase.scss
@@ -1,12 +1,13 @@
 .modal-auth-container {
-  background-color: #ffffff;
+  // background-color: #ffffff;
+  background-image: url(../images/background-mobile-header-min.jpg);
   position: relative;
   display: grid;
   padding: 20px;
   margin-right: 15px;
   margin-left: 15px;
   width: 290px;
-  border-radius: 10px;
+  border-radius: 15px;
   @media screen and (min-width: 768px) {
     width: 400px;
     padding: 40px;
@@ -14,7 +15,8 @@
 }
 
 .auth-container-title {
-  color: black;
+  color: white;
+  filter: drop-shadow(1px 2px 1px #ff6b01);
   font-size: 25px;
   padding-bottom: 20px;
 }
@@ -102,7 +104,7 @@
 }
 
 .social-login-btn {
-  background-color: transparent;
+  background-color: white;
   border-radius: 4px;
   border: 1px solid grey;
   padding: 7px 19px;
@@ -191,7 +193,7 @@
 
 .user-img {
   border-radius: 50%;
-  margin-right: 15px;
+  margin-right: 10px;
 }
 
 .auth-container {
@@ -200,23 +202,13 @@
   margin-left: 30px;
 }
 
-#userDetails {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
-
 .user-name {
-  font-size: 12px;
+  font-size: 10px;
   text-transform: uppercase;
   color: white;
 }
 
 .user-email {
-  font-size: 12px;
+  font-size: 10px;
   color: white;
-}
-
-#alreadyHaveAccount {
-  height: 35px;
 }
