--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -174,7 +174,9 @@
 }
 
 #loginUserDetails {
-  width: fit-content;
-  margin-left: auto;
-  margin-right: 15%;
+  position: absolute;
+  top: 80px;
+  right: 20px;
+  display: flex;
+  align-items: center;
 }
